--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -235,12 +235,12 @@
 
         }
         .col-sm-6.exploration{
-            background-image: url("../../images/cave-ex.webp");
+            background-image: url("../../images/cave-ex.png");
             background-size: cover;
             background-position: center;
         }
           .col-sm-6.birding{
-            background-image: url("../../images/Lovely-Cotinga.webp");
+            background-image: url("../../images/Lovely-Cotinga.png");
             background-size: cover;
             background-position: center;
         }
