--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -235,7 +235,7 @@
 
         }
         .col-sm-6.exploration{
-            background-image: url("../../images/cave-ex.png");
+            background-image: url("../../images/Cave-ex.png");
             background-size: cover;
             background-position: center;
         }
